--- a/middleware/swagger-ui/index.html
+++ b/middleware/swagger-ui/index.html
@@ -36,36 +36,42 @@
     <script src="swagger-ui-bundle.js"> </script>
     <script src="swagger-ui-standalone-preset.js"> </script>
     <script>
-      window.onload = function() {
-        function initSwaggerUi (url) {
-          window.ui = SwaggerUIBundle({
-            url: url,
-            dom_id: '#swagger-ui',
-            deepLinking: true,
-            presets: [
-              SwaggerUIBundle.presets.apis,
-              SwaggerUIStandalonePreset
-            ],
-            plugins: [
-              SwaggerUIBundle.plugins.DownloadUrl
-            ],
-            layout: "StandaloneLayout",
-            validatorUrl: null
-          });
-        }
-        var xhr = new XMLHttpRequest();
-        xhr.open('HEAD', document.location.href);
-        xhr.onreadystatechange = function () {
-          var url = '/api-docs';
-          if (xhr.readyState === XMLHttpRequest.DONE) {
-            url = xhr.getResponseHeader('Swagger-API-Docs-URL');
-          } else {
-            console.log('Unable to get the Swagger UI URL from the server (%s): %s', xhr.status, xhr.responseText);
-          }
-          initSwaggerUi(url);
-        };
-        xhr.send(null);
+      window.onload = function () {
+      function initSwaggerUi(url) {
+        window.ui = SwaggerUIBundle({
+          url: url,
+          dom_id: '#swagger-ui',
+          deepLinking: true,
+          presets: [
+            SwaggerUIBundle.presets.apis,
+            SwaggerUIStandalonePreset
+          ],
+          plugins: [
+            SwaggerUIBundle.plugins.DownloadUrl
+          ],
+          layout: "StandaloneLayout",
+          validatorUrl: null
+        });
       }
+
+      var xhr = new XMLHttpRequest();
+
+      xhr.open('HEAD', document.location.href);
+
+      xhr.onreadystatechange = function () {
+        var url = 'http://petstore.swagger.io/v2/swagger.json';
+
+        if (xhr.readyState === XMLHttpRequest.DONE) {
+          url = xhr.getResponseHeader('Swagger-API-Docs-URL');
+        } else {
+          console.log('Unable to get the Swagger UI URL from the server (%s): %s', xhr.status, xhr.responseText);
+        }
+
+        initSwaggerUi(url);
+      };
+
+      xhr.send(null);
+    }
     </script>
     
     
